Fixed Z-index DropDown Menu Issue AND added contact form

--- a/wp-content/themes/understrap/css/theme.css
+++ b/wp-content/themes/understrap/css/theme.css
@@ -15444,3 +15444,12 @@ h2{
   text-decoration: underline;
   text-underline-offset: 0.7em;
 }
+.menu-item{
+  z-index: 100;
+}
+.bwg-item0{
+  z-index: 80;
+}
+.gutena-forms-field{
+  color: black !important;
+}
